working editor with localstorage

--- a/projects/text-editor/index.html
+++ b/projects/text-editor/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 
- <div id="heading" contenteditable="true"></div>
- <div id="content" contenteditable="true"></div>
+ <div id="heading" contenteditable="true" class="margin-top-m text-large centered"></div>
+ <div id="content" contenteditable="true" class="text-small centered"></div>
 
 <script src="app.js"></script>
 
